[gd_scene load_steps=12 format=2]

[ext_resource path="res://Credits.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://QPF_assets/music/credits.ogg" type="AudioStream" id=3]
[ext_resource path="res://QPF_assets/music/coinSmash.ogg" type="AudioStream" id=4]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fondo.tscn" type="PackedScene" id=6]
[ext_resource path="res://CoinPath.tscn" type="PackedScene" id=7]
[ext_resource path="res://CoinGenerator.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Credits" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="CreditsTitleLeft" type="Label" parent="."]
margin_left = -3.0
margin_top = 498.0
margin_right = 365.0
margin_bottom = 596.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.421749, 0.535156, 0.0167236, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Thanks fo"
align = 2

[node name="CreditsTitleRight" type="Label" parent="."]
margin_left = 368.0
margin_top = 498.0
margin_right = 709.0
margin_bottom = 596.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.419608, 0.533333, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "r playing!"

[node name="CreditsBodyLeft1" type="Label" parent="."]
margin_left = 1.0
margin_top = 626.0
margin_right = 364.0
margin_bottom = 725.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Francisco \"P"
align = 2

[node name="CreditsBodyRight1" type="Label" parent="."]
margin_left = 366.0
margin_top = 626.0
margin_right = 723.0
margin_bottom = 725.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "ancho\" Calo"

[node name="CreditsBodyLeft2" type="Label" parent="."]
margin_left = 1.0
margin_top = 716.0
margin_right = 364.0
margin_bottom = 815.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Bensou"
align = 2

[node name="CreditsBodyRight2" type="Label" parent="."]
margin_left = 366.0
margin_top = 716.0
margin_right = 723.0
margin_bottom = 815.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "nd.com"

[node name="CreditsSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="CoinSmash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"

[node name="CoinsInCreditsTimer" type="Timer" parent="."]
wait_time = 1.3

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = -2.0
margin_top = 1194.0
margin_right = 105.0
margin_bottom = 1280.0

[node name="Fondo" parent="." instance=ExtResource( 6 )]

[node name="CoinPath" parent="." instance=ExtResource( 7 )]

[node name="CoinGenerator" parent="." instance=ExtResource( 8 )]
[connection signal="timeout" from="CoinsInCreditsTimer" to="." method="coin_spawn_in_credits"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
